v0.5/guides/http-layer/the-response.mdx
---
title: "The Response"
description: "Build consistent JSON responses with the Response facade."
icon: "paper-plane"
---

Every Bejibun endpoint returns a response built with the **`Response` facade**,
accessed inside controllers as `super.response`.
It produces a consistent JSON envelope and applies CORS headers automatically.

## The response envelope

`send()` returns a JSON body with a predictable shape:

```json
{
    "data": null,
    "message": "Success",
    "status": 200
}
```

| Field     | Default     | Description            |
| --------- | ----------- | ---------------------- |
| `data`    | `null`      | Your payload           |
| `message` | `"Success"` | Human-readable message |
| `status`  | `200`       | HTTP status code       |

<Note>
    Document and test all of your API endpoints against this `{data, message, status}` contract -- it is returned by
    every successful response.
</Note>

## Building a response

Chain the setters and finish with `.send()`:

```ts app/controllers/TestController.ts
import BaseController from "@bejibun/core/bases/BaseController";
import TestModel from "@/app/models/TestModel";

export default class TestController extends BaseController {
    public async index(request: Bun.BunRequest): Promise<Response> {
        const tests = await TestModel.all();

        return super.response.setData(tests).send();
    }
}
```

### Available methods

| Method                | Effect                                         |
| --------------------- | ---------------------------------------------- |
| `setData(data?)`      | Set the `data` payload                         |
| `setMessage(message)` | Set the `message` field                        |
| `setStatus(status)`   | Set the HTTP status code                       |
| `setCustom(obj?)`     | Merge extra top-level fields into the envelope |
| `send()`              | Build and return the JSON response             |
| `stream(options?)`    | Stream a file response                         |

### Custom fields and status

```ts
return super.response
    .setData(user)
    .setMessage("User created")
    .setStatus(201)
    .setCustom({
        requestId: Bun.randomUUIDv7()
    })
    .send();
```

Produces:

```json
{
    "data": {
        "name": "..."
    },
    "message": "User created",
    "status": 201,
    "requestId": "..."
}
```

## Streaming files

Use `stream()` to return a file directly (the `data` you set is treated as a file path):

```ts
public async download(request: Bun.BunRequest): Promise<Response> {
    return super.response
        .setData("storage/app/report.pdf")
        .stream({
            headers: {
                "content-type": "application/pdf"
            }
        });
}
```

<Tip>
    CORS headers are loaded once at startup and merged into **every** response -- `send()` and
    `stream()` both apply them. Configure them in `config/cors.ts`.
</Tip>
